test_suite/ui/with_fields.stderr
error: Bitflag variants cannot contain additional data
 --> $DIR/with_fields.rs:5:8
  |
5 |     Bar(u32),
  |        ^^^^^
